src/App.css
/* ... */
body {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

.name-section {
  background: url("../src/images/atitlan.jpg") center no-repeat;
  background-attachment: fixed;
  background-size: cover;
  display: grid;
  grid-template-rows: 60px 1fr;
  min-height: 600px;
  height: 100vh;
}

.links {
  font-size: 3rem;
  margin: 10px;
  position: fixed;
}

.fas,
.fa-github,
.fa-linkedin,
.fa-spotify {
  background: transparent;
  color: black;
  margin: 0 5px;
  padding: 8px;
  transition: all 0.4s ease-in-out;
}

.fas:hover,
.fa-github:hover,
.fa-linkedin:hover,
.fa-spotify:hover {
  background: black;
  color: rgb(211, 211, 211);
  transition: all 0.4s ease-in-out;
}

.name {
  animation: in 2.5s ease-out forwards;
  bottom: 0;
  line-height: 0.2;
  position: absolute;
  right: 10vw;
  text-align: right;
}

.name h1 {
  font-size: 8.5rem;
  font-weight: 300;
}

@keyframes in {
  0% {
    color: darkgrey;
    letter-spacing: -35px;
    opacity: 0;
  }
  100% {
    color: white;
    letter-spacing: 8px;
  }
}

.blink {
  background: white;
  color: black;
  opacity: 0.8;
}

.proj-title,
.challenges-title {
  align-items: center;
  background: rgb(26, 26, 26);
  color: white;
  display: flex;
  font-family: "Montserrat", sans-serif;
  font-size: 2rem;
  font-weight: 200;
  height: 7rem;
  justify-content: center;
  margin: 50px 0;
  opacity: 0.9;
}

.proj-wrapper,
.challenges-wrapper {
  display: grid;
  grid-gap: 30px;
  grid-template-columns: 1fr;
  margin: 0 15vw;
}

.challenges-wrapper {
  padding-bottom: 50px;
}

.proj,
.challenge {
  align-items: center;
  color: white;
  display: flex;
  font-size: 4rem;
  height: 16rem;
  justify-content: center;
  text-align: center;
  text-decoration: none;
  transition: 0.5s ease-in-out;
}

.proj:hover,
.challenge:hover {
  cursor: pointer;
  letter-spacing: 5px;
  opacity: 0.85;
  text-align: center;
  transition: all 0.5s ease-in-out;
  transform: scale(1.15);
  z-index: 1;
}

.proj-hover-text {
  bottom: 0px;
  color: white;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 1.3rem;
  line-height: 1;
  opacity: 0;
  padding-bottom: 45px;
  position: absolute;
  text-align: center;
  transform: scale(0.2);
  transition: 0.5s ease-in-out;
  z-index: 2;
}

.proj-summit-register .proj-hover-text {
  font-size: 1.5rem;
  text-shadow: 1px 1px rgb(225, 189, 70);
}

.proj-marvelous .proj-hover-text {
  text-shadow: 1px 1px black;
}

.proj-cc .proj-hover-text {
  color: rgb(128, 41, 41);
  text-shadow: 1px 1px white;
}

.proj-headcount .proj-hover-text {
  color: rgb(92, 161, 184);
  font-size: 1.5rem;
  padding-bottom: 25px;
  text-shadow: 1px 1px rgb(174, 174, 174);
}

.proj-swapi-box .proj-hover-text {
  color: #fdde09;
}

.proj-space-bunny .proj-hover-text {
  text-shadow: 1px 1px red;
}

.proj:hover .proj-hover-text {
  bottom: 0;
  letter-spacing: 2px;
  opacity: 1;
  text-align: center;
  transform: scale(1);
}

.proj-summit-register {
  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4)),
    url("./images/summit-register.jpg") top no-repeat;
  background-size: 100% auto;
  font-family: "Archivo", sans-serif;
  filter: saturate(1.3);
  text-decoration: underline;
}

.proj-marvelous {
  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
    url("./images/marvelous.jpg") center no-repeat;
  background-attachment: fixed;
  background-size: cover;
  font-family: "Anton", sans-serif;
  font-size: 5rem;
}

.proj-pp {
  font-family: "Gloria Hallelujah", cursive;
  opacity: 0.8;
  position: relative;
}

.pp-title {
  color: white;
  position: absolute;
  text-shadow: 2px 2px black;
  top: -28px;
}

.color {
  height: 100%;
  width: 100%;
}

.proj-cc {
  background: linear-gradient(hsla(0, 0%, 0%, 0.05), rgba(0, 0, 0, 0.1));
}

.cc-title {
  color: white;
  background: url("./images/wood.jpg");
  font-size: 5rem;
  font-weight: bold;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.proj-cc:hover .cc-title {
  border-top: 1px solid rgb(128, 41, 41);
  border-bottom: 1px solid rgb(128, 41, 41);
  letter-spacing: 5px;
  transition: all 0.5s ease-in-out;
}

.proj-headcount {
  background: url("./images/yellow-paper.jpg");
  color: black;
  font-family: "Permanent Marker", cursive;
}

.proj-space-bunny {
  background: url("./images/space-bunny.gif") center no-repeat rgb(33, 33, 33);
  background-size: 50%;
  color: #25e200;
  filter: saturate(2.2);
  font-family: "Press Start 2P", cursive;
  font-size: 2rem;
  line-height: 2;
  text-shadow: 4px 4px red;
}

.proj-swapi-box {
  background: url("./images/stars-bg.jpg") center;
  background-attachment: fixed;
  color: #fdde09;
  font-family: starWars;
  font-size: 3.2rem;
}

.proj-byobe {
  background: url("./images/beer.gif") center no-repeat;
  background-size: cover;
  font-size: 3rem;
  font-weight: 400;
}

.fa-react {
  color: white;
  font-size: 1.6rem;
  position: relative;
  left: 4px;
}

.proj-headcount .fa-react {
  color: rgb(92, 161, 184);
}

.challenge-exercism {
  background: url("./images/exercism.png") center no-repeat #0098a6;
  background-size: 50%;
}

.challenge-cw {
  background: #303132;
  font-family: "Lato", sans-serif;
}

.challenge-cw-interior {
  border: 4px solid #a42e23;
  display: flex;
  flex-direction: column;
  height: 80%;
  justify-content: space-evenly;
  width: 90%;
}

.challenge-cw h4 {
  margin: 0;
}

.cw-banner {
  height: 20%;
}

.me-section {
  background: white;
  display: grid;
  grid-template-areas:
    "headshot spotify"
    "headshot contact";
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 70vh 30vh;
  height: 100vh;
  min-height: 600px;
}

.headshot {
  align-items: flex-end;
  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6)),
    url("./images/headshotBW.jpg") center no-repeat;
  display: flex;
  background-size: cover;
  grid-area: headshot;
  margin: 0 auto;
  max-width: 960px;
}
/* ... */

